// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with data correctly 1`] = `
<div>
  <h1>
    Viewing 
    55
     
    expenses
     totalling 
    $520,623,313.25
  </h1>
</div>
`;

exports[`should render ExpensesSummary without data correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.50
  </h1>
</div>
`;
